<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SwiftDataHop</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="task_configure_name">Task configure</string>
    <string name="task_dataxfer_name">Task data transfer</string>
    <string name="task_moreinfo_name">Task more info</string>
    <string name="task_operatemode_name">Task operate mode</string>
    <string name="operate_on_off_button">Start or Stop Automatic Transfer Mode</string>
    <string name="operate_send_file_button">Send File</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="send_file_button">Send file</string>
    <string name="receive_file_button">Ready receive</string>
    <string name="set_upstream_device">Set As Upstream</string>
    <string name="set_downstream_device">Set As Downstream</string>
    <string name="downstream_device_label">Downstream Device: </string>
    <string name="upstream_device_label">Upstream Device: </string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Send file to send sample data file to group owner.</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="dirNameInput">WifiDirect_Demo_Dir</string>
    <string name="fileNameInput">amytest.txt</string>
    <string name="view_message"></string>
    <string name="read_file">timelog.txt</string>
    <string name="log_comment_edit_text">Log Comments</string>
    <string name="hint_log_comment">This will be appended to the transfer duration.</string>
    <string name="icon_description">Android Icon</string>
    <string name="clear_settings">Clear Settings</string>
</resources>
