<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/task_configure_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_configure_name" />

    <TextView
        android:id="@+id/task_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context="com.example.swiftdatahop.Fragment_PeerDetails" />

 
   <!-- Selected Device Details -->
    
   <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_vertical" />
    
    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_peer_button" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect_peer_button" />
    
    <Button
        android:id="@+id/btn_set_upstream_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_upstream_device" />
    
    <Button
        android:id="@+id/btn_set_downstream_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_downstream_device" />

    <Button
        android:id="@+id/btn_start_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_file_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_send_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_file_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_receive_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_file_button"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edit_text_log_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_log_comment"
        android:visibility="gone" />

    <TextView
        android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/device_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/group_owner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/group_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp" >
    </TextView>

</LinearLayout>