<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools" 
	android:orientation="vertical"
	android:layout_width="match_parent" 
	android:layout_height="match_parent">
	<TextView android:id="@+id/task_operatemode_name"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/task_operatemode_name" />
	<Button
        android:id="@+id/btn_operate_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operate_on_off_button" />  
    <Button
        android:id="@+id/btn_operate_send_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operate_send_file_button" 
        android:visibility="invisible"/>
	<TextView android:id="@+id/task_detail" 
	    style="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:padding="16dp" 
		android:textIsSelectable="true"
		tools:context="com.example.swiftdatahop.Fragment_OperateMode"
		android:visibility="invisible" />
	<TextView android:id="@+id/operate_status" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" />

</LinearLayout>